style: refine base styling
Adjust styles and keep index markup in sync.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="styles.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="./style.css">
     <script name="shader" data-src="vertex.glsl" data-type="vertex" data-version="v1"></script>
     <script name="shader" data-src="fragment.glsl" data-type="fragment" data-version="v1"></script>
     <script type="text/javascript" src="signals.js"></script>
@@ -11,6 +11,6 @@
     <script type="text/javascript" src="index.js"></script>
   </head>
   <body>
-    <canvas id="glcanvas" height="480" width="480"></canvas>
+    <canvas id="glcanvas" width="1280" height="720"></canvas>
   </body>
 </html>
