revert: restore modular JS utilities
Bring back glUtils/signals/uiUtils and remove inlined index changes.

--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html>
   <head>
     <link rel="stylesheet" href="./style.css">
-   <!-- <script name="shader" data-src="vertex.glsl" data-type="vertex" data-version="v1"></script>
+    <script name="shader" data-src="vertex.glsl" data-type="vertex" data-version="v1"></script>
     <script name="shader" data-src="fragment.glsl" data-type="fragment" data-version="v1"></script>
-    --><script type="text/javascript" src="glMatrix.js"></script>
+    <script type="text/javascript" src="signals.js"></script>
+    <script type="text/javascript" src="glMatrix.js"></script>
+    <script type="text/javascript" src="glUtils.js"></script>
+    <script type="text/javascript" src="uiUtils.js"></script>
     <script type="text/javascript" src="index.js"></script>
   </head>
   <body>
