--- a/index.html
+++ b/index.html
@@ -2,23 +2,24 @@
 <html>
   <head>
     <title>3d: Cube Mouse Rotation</title>
-    <meta name="author" content="David W Parker">
-    <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <link href="styles.css" rel="stylesheet" type="text/css">
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
   </head>
-
   <body>
-    <canvas id="glcanvas" height="480" width="480">
-      Your browser doesn't appear to support the HTML5 <code>&lt;canvas&gt;</code> element.
-    </canvas>
+    <canvas id="glcanvas" height="500" width="500"></canvas>
 
     <!-- Shaders -->
-    <script name="shader" data-src="vertex.glsl" data-type="vertex" data-version="v1"></script>
-    <script name="shader" data-src="fragment.glsl" data-type="fragment" data-version="v1"></script>
-    <script type="text/javascript" src="signals.js"></script>
-    <script type="text/javascript" src="glMatrix.js"></script>
-    <script type="text/javascript" src="glUtils.js"></script>
-    <script type="text/javascript" src="index.js"></script>
+    <script name="shader" data-src="shaders/vertex.glsl" data-type="vertex" data-version="v1"></script>
+    <script name="shader" data-src="shaders/fragment.glsl" data-type="fragment" data-version="v1"></script>
+
+    <!-- Library: Signals processing used for dispatching methods -->
+    <script type="text/javascript" src="libs/signals.js"></script>
+    <script type="text/javascript" src="libs/glMatrix.js"></script>
+
+    <!-- Library: our common libraries -->
+    <script type="text/javascript" src="libs/glUtils.js"></script>
+    <script type="text/javascript" src="libs/uiUtils.js"></script>
+
+    <!-- This is the bulk of the actual WebGL stuff -->
+    <script type="text/javascript" src="script/index.js"></script>
   </body>
 </html>
