--- a/index.html
+++ b/index.html
@@ -1,25 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>3d: Cube Mouse Rotation</title>
-    <link href="css/styles.css" rel="stylesheet" type="text/css">
+    <title>Three.js Basics</title>
+    <meta charset="UTF-8" />
+    <link rel="stylesheet" href="./src/styles.css" />
   </head>
   <body>
-    <canvas id="glcanvas" height="500" width="500"></canvas>
-
-    <!-- Shaders -->
-    <script name="shader" data-src="shaders/vertex.glsl" data-type="vertex" data-version="v1"></script>
-    <script name="shader" data-src="shaders/fragment.glsl" data-type="fragment" data-version="v1"></script>
-
-    <!-- Library: Signals processing used for dispatching methods -->
-    <script type="text/javascript" src="libs/signals.js"></script>
-    <script type="text/javascript" src="libs/glMatrix.js"></script>
-
-    <!-- Library: our common libraries -->
-    <script type="text/javascript" src="libs/glUtils.js"></script>
-    <script type="text/javascript" src="libs/uiUtils.js"></script>
-
-    <!-- This is the bulk of the actual WebGL stuff -->
-    <script type="text/javascript" src="script/index.js"></script>
+    <canvas class="webgl"></canvas>
+	<script src="src/index.js" type="module"></script>
   </body>
 </html>
