feat: add color control UI
Add color changer controls and update styles/rendering.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,18 @@
     <link rel="stylesheet" href="./src/styles.css" />
   </head>
   <body>
+  <div class="container">
     <canvas class="webgl"></canvas>
-	<script src="src/index.js" type="module"></script>
+  </div>
+  <div class="container">
+    <div class="color-box">
+      <button class="color-button" id="buttonRed">Red</button>
+      <button class="color-button" id="buttonBlue">Blue</button>
+      <button class="color-button" id="buttonGreen">Green</button>
+      <button class="color-button" id="buttonYellow">Yellow</button>
+    </div>
+  </div>
+    <script src="src/index.js" type="module"></script>
   </body>
 </html>
+
