fix: add import map for modules
Add an import map and update module imports.

--- a/index.html
+++ b/index.html
@@ -30,6 +30,14 @@
       <small>HDRI: Royal Esplanade &mdash; © Poly Haven</small>
     </footer>
 
+    <script type="importmap">
+      {
+        "imports": {
+          "three": "https://unpkg.com/three@0.164.1/build/three.module.js",
+          "three/addons/": "https://unpkg.com/three@0.164.1/examples/jsm/"
+        }
+      }
+    </script>
     <script src="src/index.js" type="module"></script>
   </body>
 </html>
